--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+body {
+  margin: auto;
+  background-image: url("background_photo_1.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-color: rgba(15,30,36);
+  backdrop-filter: blur(5px);
+}
+
 header {
   margin-top: 70px;
   display: flex;
@@ -7,22 +16,60 @@ header {
   margin-right: auto;
 }
 
-body {
-  margin: auto;
-  background-image: url("background_photo_1.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  backdrop-filter: blur(5px);
+main {
+  min-height: 250px;
+}
+h1 {
+  font-size: 100px;
 }
 
-.photo {
-    width: 300px;
-    height: 300px;
-    margin-right: 100px;
-    object-fit: cover;
-    object-position: bottom;
-    border-radius: 500px;
+/*===============================================================*/
+/* Header Photo Effect */
+
+.box {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  margin-right: 100px;
 }
+.box::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: repeating-conic-gradient(from var(--a), transparent 0%, transparent 10%, 
+  #ffda00 45%, #ffda00 50%, transparent 50%, transparent 60%, #0f1e24 95%, #0f1e24 100%);
+  animation: spinning_animation 4s linear infinite;
+  border-radius: 100%;
+  filter: blur(3px);
+}
+.box::after {
+  content: '';
+  position: absolute;
+  inset: 10px;
+  background-image: url("photo.png");
+  background-repeat: no-repeat;
+  background-size: 140%;
+  background-position: bottom;
+  background-position-y: 94%;
+  border-radius: 100%;
+}
+
+@property --a {
+  syntax: '<angle>';
+  inherits: false;
+  initial-value: 0deg;
+}
+
+@keyframes spinning_animation {
+  0% {
+    --a: 0deg;
+  }
+  100% {
+    --a: 360deg;
+  }
+}
+/*===============================================================*/
 
 /*===============================================================*/
 /* Header Typing Effect */
@@ -35,7 +82,8 @@ body {
   color:rgb(255, 255, 255);
 }
 .TypingEffect_div span {
-  color: black;
+  color: #0f1e24;
+  text-shadow: 0px 0px 5px #ffda00;
 }
 .TypingEffect_Line_2, .TypingEffect_Line_3 {
   font-size: 30px;
@@ -45,7 +93,7 @@ body {
 
 .TypingEffect_Line_1 {
   font-size: 40px;
-  border-right: 2px solid transparent;
+  border-right: 3px solid transparent;
 
   /* define animation types for text + cursor */
   animation: animated-text__1 3s steps(23, end) 1s 1 normal both,
@@ -53,7 +101,7 @@ body {
 }
 
 .TypingEffect_Line_2 {
-  border-right: 2px solid transparent;
+  border-right: 3px solid transparent;
 
   /* define animation types for text + cursor */
   animation: animated-text__2 4s steps(38, end) 1s 1 normal both,
@@ -63,7 +111,7 @@ body {
 }
 
 .TypingEffect_Line_3 {
-  border-right: 2px solid transparent;
+  border-right: 3px solid transparent;
 
   /* define animation types for text + cursor */
   animation: animated-text__3 4s steps(39, end) 1s 1 normal both,
@@ -106,6 +154,103 @@ body {
   to {
     width: 39ch;
   }
+}
+
+/*===============================================================*/
+
+/*===============================================================*/
+/* Footer Social Media Bar */
+
+footer {
+  margin-top: 10px;
+  margin-bottom: 40px;
+  font-size: 15px;
+  font-family: consolas;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+footer h1 {
+  font-size: 50px;
+  color: white;
+}
+
+.SocialMedia_Bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+
+.SocialMedia_Bar ul {
+  position: relative;
+  display: flex;
+  gap: 50px;
+  padding: 0px;
+}
+.SocialMedia_Bar ul li {
+  position: relative;
+  list-style: none;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.SocialMedia_Bar ul li::before {
+  content: '';
+  position: absolute;
+  inset: 30px;
+  box-shadow: 0 0 0 10px var(--clr), 0 0 0 20px rgba(15,30,36), 0 0 0 22px var(--clr);
+  transition: 0.5s;
+}
+.SocialMedia_Bar ul li::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background: rgba(15,30,36);
+  transform: rotate(45deg);
+  transition: 0.5s;
+}
+.SocialMedia_Bar ul li a {
+  position: relative;
+  text-decoration: none;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.SocialMedia_Bar ul li a i {
+  font-size: 3em;
+  transition: 0.5s;
+  color: var(--clr);
+}
+.SocialMedia_Bar ul li:hover a i {
+  transform: translateY(-25%);
+}
+.SocialMedia_Bar ul li a span {
+  position: absolute;
+  color: var(--clr);
+  opacity: 0;
+  transition: 0.5s;
+  transform: scale(0) translateY(50%);
+}
+.SocialMedia_Bar ul li:hover a span {
+  opacity: 1;
+  transform: scale(1) translateY(100%);
+}
+
+.SocialMedia_Bar ul li:hover::before {
+  inset: 15px;
+}
+.SocialMedia_Bar ul li:hover::after {
+  inset: 0px;
+  transform: rotate(0deg);
+}
+.SocialMedia_Bar ul li:hover a i, ul li:hover a span {
+  filter: drop-shadow(0 0 20px var(--clr)) drop-shadow(0 0 40px var(--clr)) drop-shadow(0 0 60px var(--clr));
 }
 
 /*===============================================================*/
